force-app/main/default/main/default/objects/Show_Time__c/Show_Time__c.object-meta.xml
<CustomObject>
    <label>Show Time</label>
    <nameField>
        <label>Show Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Show Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>