force-app/main/default/main/default/objects/Show_Time__c/fields/Movie__c.field-meta.xml
<CustomField>
    <fullName>Movie__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Movie</label>
    <referenceTo>Movie__c</referenceTo>
    <relationshipLabel>Show Times</relationshipLabel>
    <relationshipName>Show_Times</relationshipName>
    <type>Lookup</type>
</CustomField>