force-app/main/default/main/default/objects/Show_Time__c/fields/Show_Time__c.field-meta.xml
<CustomField>
    <fullName>Show_Time__c</fullName>
    <label>Show Time</label>
    <required>true</required>
    <type>Date</type>
</CustomField>