force-app/main/default/main/default/objects/Show_Time__c/validationRules/can_notBeNull.validationRule-meta.xml
<ValidationRule>
    <fullName>can_notBeNull</fullName>
    <active>true</active>
    <description>ShowTime can not be null</description>
    <errorConditionFormula>Len(Name)&lt;1</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Show Time name can not be null</errorMessage>
</ValidationRule>