force-app/main/default/main/default/objects/Show_Time__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Show_Time__c</columns>
    <columns>Time__c</columns>
    <columns>Movie__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>